--- a/authorcopilot/package.json
+++ b/authorcopilot/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
@@ -16,6 +17,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:backend": "cd backend && npm start",
+    "start:both": "concurrently \"npm start\" \"npm run start:backend\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^7.1.0",
     "tailwindcss": "^3.2.7"
   }
 }
