--- a/fullstack/package.json
+++ b/fullstack/package.json
@@ -11,9 +11,11 @@
     "axios": "^1.3.4",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-transition-group": "^4.4.5",
     "recharts": "^2.5.0",
     "web-vitals": "^2.1.4"
