--- a/fullstack/backend/package.json
+++ b/fullstack/backend/package.json
@@ -17,7 +17,8 @@
     "jsonify": "^0.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "stream-buffers": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
