--- a/fullstack/backend/package.json
+++ b/fullstack/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "bun index.js --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
