--- a/fullstack/package.json
+++ b/fullstack/package.json
@@ -57,5 +57,6 @@
   "devDependencies": {
     "concurrently": "^7.1.0",
     "tailwindcss": "^3.2.7"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
